tests/parser-test-files/bad-files/parse-attribute.2.error
error: Malformed monomorphize attribute
  --> test:4:0
   |
 4 |  (monomorphize 5)
   |  ^^^^^^^^^^^^^^^^ unexpected form
